# bene-gesserit

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.full  Dockerfile.minimal  README.md  compose.yaml  config.dkr.toml  config.toml  flake.nix  overseer.sh
.forgejo/workflows/: docker_docs.yml  docker_main.yml  docker_release.yml  on_push.yml
anubis/: botPolicy.json
caddy/: Caddyfile  robots.txt
docker-assets/: overseer.sh
docker_include/anubis/: botPolicy.json
docker_include/iocaine/: config.toml
docker_include/openresty/bg_conf/: honeypots
docker_include/openresty/lua/: honeypots.lua
docker_include/openresty/nginx.conf.d/: default.conf
docker_include/prometheus/: prometheus.yml
docs/: Dockerfile
docs/source/: conf.py  design.rst  index.rst  motivation.rst
docs/source/config/: anubis.rst  config.rst  custom_env.rst  index.rst  labyrinth.rst  ratelimit.rst
docs/source/deployment/: compose.rst  distributed.rst  docker.rst  index.rst  metrics.rst
docs/source/development/: config.rst  index.rst  roadmap.rst  testing.rst
docs/source/legal/: gplv3.rst  index.rst  sample_privacy_policy.rst
example/: index.html
iocaine/: config.toml
openresty/lua/: honeypots.lua
openresty/nginx.conf.d/: default.conf
src/: config.rs  corpus.rs  environment.rs  error.rs  lib.rs  main.rs  template.rs
src/cli/: mod.rs  supervisord.rs
src/generator/: corpus.rs  environment.rs  mod.rs  template.rs
static/anubis/: botPolicy.yaml
static/nginx/lua/: clients.lua  honeypots.lua  ipban.lua  ratelimit.lua  robots.lua
templates/anubis/: botPolicy.yaml.tera
templates/iocaine/: config.toml.tera
templates/nginx/bg_conf/: honeypots.tera  rules.json.tera
templates/nginx/conf.d/: default.conf.tera
templates/openresty/bg_conf/: honeypots.tera
templates/openresty/nginx.conf.d/: default.conf.tera
templates/prometheus/: prometheus.yml.tera
templates/supervisord/: supervisord.conf.tera
test/: common.py  requirements.txt  test_honeypot.py  test_labyrinth.py  test_ratelimit.py
test/cfgs/: config.dkr.toml
test/example/: index.html
(+7 files in other folders)
