[package]
name = "bene_gesserit"
version = "0.1.0"
edition = "2024"

[features]
http = [ "dep:reqwest", "dep:openssl" ]
cli = [ "dep:clap" ]

[dependencies]
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.1"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = [ "derive" ] }
toml = "0.9.4"
tera = "1.20.0"
reqwest = { version = "0.12.22", features = [ "blocking" ], optional = true }
openssl = { version = "0.10.73", features = [ "vendored" ], optional = true }
clap = { version = "4.5.43", features = [ "derive" ], optional = true }


[[bin]]
name = "generator"
required-features = [ "cli" ]