[package]
name = "bene_gesserit"
version = "0.1.1"
edition = "2024"

[features]
http = [ "dep:reqwest", "dep:openssl" ]
cli = [ "dep:clap" ]

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
regex = "1.12.2"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.145"
figment = { version = "0.10.19", features = [ "toml", "env" ] }
tera = "1.20.0"
reqwest = { version = "0.12.24", features = [ "blocking" ], optional = true }
openssl = { version = "0.10.74", features = [ "vendored" ], optional = true }
clap = { version = "4.5.49", features = [ "derive" ], optional = true }

[[bin]]
name = "generator"
required-features = [ "cli" ]