[package]
name = "bene_gesserit"
version = "0.1.6"
edition = "2024"

[features]
http = [ "dep:reqwest", "dep:openssl" ]
cli = [ "dep:clap" ]

[dependencies]
log = "0.4.29"
env_logger = "0.11.9"
regex = "1.12.3"
thiserror = "2.0.18"
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
figment = { version = "0.10.19", features = [ "toml", "env" ] }
tera = "1.20.0"
reqwest = { version = "0.13.2", features = [ "blocking" ], optional = true }
openssl = { version = "0.10.75", features = [ "vendored" ], optional = true }
clap = { version = "4.5.60", features = [ "derive" ], optional = true }

[[bin]]
name = "generator"
required-features = [ "cli" ]